<resources>
    <string name="app_name">Online Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Online Store</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_catalogs">Catalogs</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <string name="title_activity_product">Sản phẩm</string>
    <string name="title_detail">Tổng quan</string>
    <string name="title_judge">Đánh giá &#38; nhận xét</string>
    <string name="title_relate">Liên quan</string>
    <string name="register"><u>Register</u></string>
    <string name="fogotpass"><u>Forgot Password</u></string>
</resources>