<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.capstonandroid.ui.order.OrderFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.capstonandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalogs"
        android:name="com.example.capstonandroid.ui.catalogs.CatalogFragment"
        android:label="@string/menu_catalogs"
        tools:layout="@layout/fragment_catalogs" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.capstonandroid.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.capstonandroid.ui.order.OrderFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.capstonandroid.ui.product.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/navigation_comment"
        android:name="com.example.capstonandroid.ui.product.ui.comment.CommentFragment"
        android:label="@string/title_judge"
        tools:layout="@layout/fragment_comment" />
    <fragment
        android:id="@+id/navigation_relate"
        android:name="com.example.capstonandroid.ui.product.ui.relate.RelateFragment"
        android:label="@string/title_relate"
        tools:layout="@layout/fragment_relate" />
</navigation>